--- a/_sass/overkyll-jekyll-theme.scss
+++ b/_sass/overkyll-jekyll-theme.scss
@@ -18,17 +18,3 @@ $info:              	   #2980b9;
 @import "elements/form";
 //@import "elements/buttons";
 
-
-label, input, textarea {
-	width: 100%;
-}
-
-.button.button--warning{
-	color: #000;
-}
-
-.site-header-hero {
-	position: relative;
-	min-height: 35vmin;
-	// background-image: url(/assets/images/background-arnold.jpg);
-}
